# SkillKit

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .npmignore  .todo-tracker.exclusions.json  .todo-tracker.exclusions.json.bak  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSIONS.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  VISION.md  cross_language_patterns_test.py  eslint.config.js  fix-plan.json  package.json  pnpm-lock.yaml  publish.ps1  test-bash.sh  test-cmd.bat  test-input.json  test-launch.ps1  test-launch.sh  test_cross_language_patterns.java  test_py.py  test_python_extended.py  test_python_todo.py  todo-tracker-after-critical-fixes.json  todo-tracker-after-fixes.json  todo-tracker-final-exclusions.json  todo-tracker-final2.json  todo-tracker-final3.json  todo-tracker-final4.json  todo-tracker-final5.json  todo-tracker-final6.json  (+15 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml
ai-patterns-test/: ai_patterns.py
ai-test/: real_ai_patterns_from_research.py
docs/: AI_CAPABILITIES_ROADMAP.md  ARCHITECTURE_AND_AUTO_CUSTOMIZATION.md  AUTO_CUSTOMIZATION_SOLUTION.md  BRANDING_UPDATE.md  CONFLICT_PREVENTION.md  CONFLICT_PREVENTION_STATUS.md  CROSS_LANGUAGE_WORKFLOWS.md  CURRENT_STATUS.md  CURSOR_FIRST_ROADMAP.md  DOCS_ROOT_REVIEW_07-11-2025.md  DYNAMIC_WORKFLOW_ARCHITECTURES.md  README.md  (+40 more)
docs-site/: .gitignore  README.md  docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
test-projects/python-project/: Makefile  app.py  pyproject.toml  test_app.py  test_incomplete.py
(+451 files in other folders)
